--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ body {
     flex-direction: column;
     align-items: center;
 }
-/* This css aligns each game mode to the center of the page*/
+/* This css aligns each game mode to the center of the page, creates the size, border and colors */
 .game-box {
     width: 90%;
     height: 50vh;
@@ -64,6 +64,7 @@ body {
 /* Media query: tablets and larger (768px and up) */
 
 @media screen and (min-width: 768px) {
+    /* Add max width to the game box selectors for cleaner look. */
     .game-box {
         max-width: 500px;
     }
@@ -72,6 +73,7 @@ body {
 /* Large devices (laptops and desktops, 992px and up) */
 
 @media screen and (min-width: 992px) {
+    /* Display game selection boxes in a row on larger screen sizes */
     #game-area {
         flex-direction: row;
     }
