--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,37 +4,58 @@
     margin: 0;
     box-sizing: border-box;
 }
+
 /* Add general styles */
 body {
     background-color: #5F5B50;
 }
 
-#heading {
-   text-align: center;
-   color: #FAD130;
-   font-size: 35px;
-   font-weight: bold;
+h1,
+h2,
+h3 {
+    text-transform: uppercase;
 }
+
+#submit {
+    width: 50%;
+    padding: 5px;
+    color: black;
+    border: 2px solid #29250D;
+    border-radius: 5px;
+}
+
+#heading {
+    text-align: center;
+    color: black;
+    font-size: 35px;
+    font-weight: bold;
+}
+
 .description {
     text-align: center;
-    color: #FAD130;
-    margin: 0 5px;
+    color: black;
+    margin: 20px 10%;
 }
+
 /* How to play section */
 #how-to-play {
     display: flex;
     justify-content: center;
     padding: 20px 0;
 }
+
 #how-to-play button {
     width: 80%;
     height: 50px;
     font-size: 20px;
-    border: 1px solid #FAD130;
+    font-weight: bold;
+    border: 1px solid #29250D;
     border-radius: 20px;
-    background-color: #29250D;
-    color: #FAD130;
+    background-color: #EAE3B9;
+    color: #29250D;
+    max-width: 400px;
 }
+
 /* Game area section */
 
 #game-area {
@@ -42,21 +63,87 @@ body {
     flex-direction: column;
     align-items: center;
 }
+
 /* This css aligns each game mode to the center of the page, creates the size, border and colors */
 .game-box {
     width: 90%;
     height: 50vh;
     background-color: #EAE3B9;
-    border: 1px solid #FAD130;
+    border: 2px solid #29250D;
     border-radius: 10px;
     margin: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 /* This CSS makes the guess bhp h3 appear above the text input box*/
 .guess-bhp {
     flex-direction: column;
+}
+#guess-bhp-box {
+    width: 50%;
+    margin: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    border: 2px solid #29250D;
+    text-align: center;
+}
+/* Score section */
+#score {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20px;
+}
+
+#score div {
+    padding: 5px 0;
+}
+
+/* Footer */
+footer {
+    padding-top: 50px;
+    display: flex;
+    justify-content: space-around;
+}
+
+footer>div {
+    flex: 1;
+    text-align: center;
+}
+
+#footer {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+}
+
+#site-build {
+    order: 0;
+    font-size: 20px;
+}
+
+#linkedin {
+    order: 1;
+    padding-left: 20px;
+    font-size: 50px;
+}
+
+#github {
+    order: 2;
+    padding-left: 20px;
+    font-size: 50px;
+}
+
+/* My media links */
+a {
+    color: #FAD130;
+}
+
+/* Highlight icon when mouse hovers */
+a:hover {
+    color: ;
 }
 
 /* Media queries */
@@ -64,15 +151,21 @@ body {
 /* Media query: tablets and larger (768px and up) */
 
 @media screen and (min-width: 768px) {
+
     /* Add max width to the game box selectors for cleaner look. */
     .game-box {
         max-width: 500px;
+    }
+
+    .description {
+        margin: 20px 30%;
     }
 }
 
 /* Large devices (laptops and desktops, 992px and up) */
 
 @media screen and (min-width: 992px) {
+
     /* Display game selection boxes in a row on larger screen sizes */
     #game-area {
         flex-direction: row;
