--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,22 +56,30 @@ h3 {
     max-width: 400px;
     cursor: pointer;
 }
-#how-to-pay-box {
+#how-to-play-box {
     display: none;
-    position: absolute;
+    position: fixed;
     z-index: 999;
-    width: 300px;
-    height: 300px;
-    background-color: rgba(0, 0, 0, .7);
-    border: 2px solid #FAD130;
-    border-radius: 5px;
+    background-color: #EAE3B9;
+    border: none;
     color: black;
-    transform: translate(-50%, -50%);
+    height: 100%;
+    width: 100%;
+    bottom: 0;
+}
+.htp-text {
+    padding: 50% 10%;
+    text-align: center;
+    font-size: 1.2rem;
+}
+.htp-text h2 {
+    padding-bottom: 10px;
 }
 #close-btn {
-    position: relative;
+    position: absolute;
     top: 5px;
-    right: 10px;
+    left: 270px;
+    font-size: 50px;
     cursor: pointer;
 }
 /* Game area section */
