--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,8 +56,11 @@ h3 {
     max-width: 400px;
     cursor: pointer;
 }
+
 #how-to-play-box {
+    /* Hides the content until the how to play button is clicked */
     display: none;
+    /* Style the how to menu */
     position: fixed;
     z-index: 999;
     background-color: #EAE3B9;
@@ -68,6 +71,7 @@ h3 {
     bottom: 0;
 }
 .htp-text {
+    /* Aligns text to the center of the screen */
     padding: 50% 10%;
     text-align: center;
     font-size: 1.2rem;
@@ -75,6 +79,7 @@ h3 {
 .htp-text h2 {
     padding-bottom: 10px;
 }
+/* Displays the close button 'X' in the top right corner of a screen */
 #close-btn {
     position: absolute;
     top: 5px;
