Add html and JS for game selection, new game opens full screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,10 +106,10 @@ h3 {
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
-
 /* This CSS makes the guess bhp h3 appear above the text input box*/
-.guess-bhp {
+.accel-game {
     flex-direction: column;
 }
 #guess-bhp-box {
