Fix game content display when each game is selected

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,9 @@ h3 {
     cursor: pointer;
 }
 /* Game area section */
-
+.game-content {
+    display: none;
+}
 #game-area {
     display: flex;
     flex-direction: column;
