--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ h3 {
     cursor: pointer;
 }
 /* Game area section */
-.game-content {
+.game-screen {
     display: none;
 }
 #game-area {
@@ -110,9 +110,14 @@ h3 {
     align-items: center;
     cursor: pointer;
 }
+.overlay {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 #prev-car,
 #next-car {
-    background-image: url("") center/cover norepeat;
     display: flex;
     position: relative;
     align-items: center;
