--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,9 @@ h2,
 h3 {
     text-transform: uppercase;
 }
+button:hover {
+    cursor: pointer;
+}
 #submit {
     width: 50%;
     padding: 5px;
