--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,7 @@ button:hover {
 /* Game area section */
 .game-screen {
     display: none;
+    height: 100vh;
 }
 #game-area {
     display: flex;
@@ -114,10 +115,35 @@ button:hover {
     cursor: pointer;
 }
 .overlay {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.4);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100%;
+    height: 100%;
+    color: white;
+}
+.overlay > button {
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 20px 60px;
+    margin-bottom: 5px;
+    border: 1px solid white;
+    border-radius: 40px;
+    font-size: 1.2rem;
+    font-weight: 700;
+    /* Put the higher or lower buttons above the next cars information in the center of the screen */
+    position: absolute;
+    bottom: 80%;
+}
+#higher-btn{
+margin: 80px;
+}
+.overlay > p {
+    font-weight: 600;
+    font-size: 30px;
 }
 #prev-car,
 #next-car {
@@ -125,17 +151,28 @@ button:hover {
     position: relative;
     align-items: center;
     justify-content: center;
-    z-index: 50;
     flex-direction: column;
+    z-index: 50;
+    width: 100%;
+    height: 50%;
+}
+#prev-car img,
+#next-car img {
+    object-fit: cover;
     width: 100%;
     height: 100%;
 }
-/* Score section */
 #score {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 20px;
+    position: absolute;
+    z-index: 55;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 10px 20px;
+    border: 1px solid white;
+    border-radius: 30px;
+    font-size: 30px;
+    left: 20px;
+    top: 20px;
 }
 
 #score div {
