--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,14 +28,14 @@ button:hover {
 
 #heading {
     text-align: center;
-    color: black;
+    color: white;
     font-size: 35px;
     font-weight: bold;
 }
 
 .description {
     text-align: center;
-    color: black;
+    color: white;
     margin: 20px 10%;
 }
 
@@ -75,7 +75,7 @@ button:hover {
 }
 .htp-text {
     /* Aligns text to the center of the screen */
-    padding: 50% 10%;
+    padding: 150px 10%;
     text-align: center;
     font-size: 1.2rem;
 }
@@ -226,19 +226,18 @@ margin: 80px;
 /* Footer */
 footer {
     padding-top: 50px;
-    display: flex;
-    justify-content: space-around;
-}
-
-footer>div {
-    flex: 1;
     text-align: center;
 }
 
+/* footer>div {
+    flex: 1;
+    text-align: center;
+} */
+
 #footer {
-    position: absolute;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 #site-build {
@@ -285,5 +284,7 @@ a {
 /* Large devices (laptops and desktops, 992px and up) */
 
 @media screen and (min-width: 992px) {
-
+    #game-area{
+        flex-direction: row;
+    }
 }
