--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,17 +223,16 @@ margin: 80px;
 #final-score {
     font-size: 40px;
 }
+#high-score {
+    text-align: center;
+    color: white;
+    font-size: 40px;
+}
 /* Footer */
 footer {
-    padding-top: 50px;
+    padding-top: 10px;
     text-align: center;
 }
-
-/* footer>div {
-    flex: 1;
-    text-align: center;
-} */
-
 #footer {
     display: flex;
     justify-content: center;
