--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,11 @@
 
 /* Add general styles */
 body {
-    background-color: #5F5B50;
+    background: url('../images/porsche911turbos.avif') center / cover no-repeat fixed;
+}
+
+h1 {
+    text-decoration: underline;
 }
 
 h1,
@@ -15,9 +19,11 @@ h2,
 h3 {
     text-transform: uppercase;
 }
+
 button:hover {
     cursor: pointer;
 }
+
 #submit {
     width: 50%;
     padding: 5px;
@@ -39,6 +45,10 @@ button:hover {
     margin: 20px 10%;
 }
 
+.description>h2 {
+    text-decoration: underline;
+}
+
 /* How to play section */
 #how-to-play {
     display: flex;
@@ -47,15 +57,15 @@ button:hover {
     flex-direction: column;
     align-items: center;
 }
+
 .htp-btn {
     width: 80%;
     height: 50px;
     font-size: 20px;
     font-weight: bold;
-    border: 1px solid #29250D;
     border-radius: 20px;
-    background-color: #EAE3B9;
-    color: #29250D;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
     max-width: 400px;
     cursor: pointer;
 }
@@ -66,21 +76,42 @@ button:hover {
     /* Style the how to menu */
     position: fixed;
     z-index: 999;
-    background-color: #EAE3B9;
+    background: url('../images/lamborghinisvj.avif') center / cover no-repeat fixed;
     border: none;
-    color: black;
+    color: white;
     height: 100%;
     width: 100%;
     bottom: 0;
 }
+
 .htp-text {
     /* Aligns text to the center of the screen */
     padding: 150px 10%;
     text-align: center;
     font-size: 1.2rem;
+    background-color: rgba(0, 0, 0, 0.4);
+    height: 100%;
 }
+
 .htp-text h2 {
     padding-bottom: 10px;
+}
+
+.high-score {
+    width: 80%;
+    height: 50px;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    max-width: 400px;
+    cursor: pointer;
+    margin-top: 10px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 /* Displays the close button 'X' in the top right corner of a screen */
 #close-btn {
@@ -90,11 +121,13 @@ button:hover {
     font-size: 50px;
     cursor: pointer;
 }
+
 /* Game area section */
 .game-screen {
     display: none;
     height: 100vh;
 }
+
 #game-area {
     display: flex;
     flex-direction: column;
@@ -102,10 +135,33 @@ button:hover {
 }
 
 /* This css aligns each game mode to the center of the page, creates the size, border and colors */
+
+.game-overlay {
+    z-index: 100;
+    color: white;
+    font-size: 14px;
+    position: relative;
+    padding: 5px 10px;
+    background: rgba(0, 0, 0, 0.7);
+    border-radius: 20px;
+}
+
+#game-btn-bhp {
+    background: url('../images/lambohuracanperf.avif') center / cover no-repeat;
+}
+
+#game-btn-speed {
+    background: url('../images/porschecarreragt.jpeg') center / cover no-repeat;
+}
+
+#game-btn-price {
+    background: url('../images/koenigseggjeskoabsolut.avif') center / cover no-repeat;
+}
+
 .game-box {
     width: 90%;
     height: 50vh;
-    background-color: #EAE3B9;
+    background-color: rgba(0, 0, 0, 0.7);
     border: 2px solid #29250D;
     border-radius: 10px;
     margin: 5px;
@@ -126,7 +182,8 @@ button:hover {
     height: 100%;
     color: white;
 }
-.overlay > button {
+
+.overlay>button {
     background-color: rgba(0, 0, 0, 0.7);
     color: white;
     padding: 20px 60px;
@@ -139,14 +196,17 @@ button:hover {
     position: absolute;
     bottom: 80%;
 }
-#higher-btn{
-margin: 80px;
+
+#higher-btn {
+    margin: 80px;
 }
-.overlay > p {
+
+.overlay>p {
     text-align: center;
     font-weight: 600;
     font-size: 30px;
 }
+
 /* Game image styling */
 #prev-car,
 #next-car {
@@ -159,12 +219,14 @@ margin: 80px;
     width: 100%;
     height: 50%;
 }
+
 #prev-car img,
 #next-car img {
     object-fit: cover;
     width: 100%;
     height: 100%;
 }
+
 #score {
     position: absolute;
     z-index: 55;
@@ -181,15 +243,18 @@ margin: 80px;
 #score div {
     padding: 5px 0;
 }
+
 #game-end-img {
     width: 100%;
     height: 100%;
     z-index: -1;
     position: fixed;
 }
+
 #game-end-menu {
     display: none;
 }
+
 .game-end-menu {
     position: absolute;
     display: flex;
@@ -200,6 +265,7 @@ margin: 80px;
     width: 100%;
     height: 100%;
 }
+
 .overlay-menu {
     background-color: rgba(0, 0, 0, 0.4);
     display: flex;
@@ -210,6 +276,7 @@ margin: 80px;
     height: 100%;
     color: white;
 }
+
 #play-again-btn,
 #main-menu-btn {
     color: white;
@@ -220,19 +287,18 @@ margin: 80px;
     font-size: 30px;
     margin-top: 5px;
 }
+
 #final-score {
     font-size: 40px;
 }
-#high-score {
-    text-align: center;
-    color: white;
-    font-size: 40px;
-}
+
 /* Footer */
 footer {
     padding-top: 10px;
     text-align: center;
+    color: white;
 }
+
 #footer {
     display: flex;
     justify-content: center;
@@ -258,7 +324,7 @@ footer {
 
 /* My media links */
 a {
-    color: #FAD130;
+    color: gold;
 }
 
 /* Highlight icon when mouse hovers */
@@ -283,7 +349,38 @@ a {
 /* Large devices (laptops and desktops, 992px and up) */
 
 @media screen and (min-width: 992px) {
-    #game-area{
+    #game-area {
         flex-direction: row;
+    }
+
+    a:hover {
+        color: white;
+    }
+
+    .htp-btn:hover {
+        color: black;
+        background-color: rgba(250, 250, 250, 0.7);
+        transition: transform 0.4s ease;
+        /* Increase the size of the button by 5% when mouse is hovered */
+        transform: scale(1.05);
+    }
+
+    .game-box:hover {
+        /* Transition sets the hover effect to happen slowly, this gives a sleek finish */
+        transition: transform 0.4s ease;
+        transform: scale(1.03);
+    }
+
+    #close-btn:hover {
+        color: black;
+    }
+
+    #higher-btn:hover,
+    #lower-btn:hover,
+    #play-again-btn:hover,
+    #main-menu-btn:hover {
+        color: black;
+        background-color: rgba(250, 250, 250, 0.7);
+        transition: transform 0.3s ease;
     }
 }
