--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -370,9 +370,13 @@ a {
         transition: transform 0.4s ease;
         transform: scale(1.03);
     }
-
+    #close-btn {
+        top: 0;
+        left: 5px;
+        font-size: 100px;
+    }
     #close-btn:hover {
-        color: black;
+        color: red;
     }
 
     #higher-btn:hover,
@@ -382,5 +386,7 @@ a {
         color: black;
         background-color: rgba(250, 250, 250, 0.7);
         transition: transform 0.3s ease;
+        transform: scale(1.1);
     }
+    
 }
