--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,7 @@ button:hover {
 #close-btn {
     position: absolute;
     top: 5px;
-    left: 270px;
+    left: 10px;
     font-size: 50px;
     cursor: pointer;
 }
@@ -251,6 +251,7 @@ button:hover {
     height: 100%;
     z-index: -1;
     position: fixed;
+    object-fit: cover;
 }
 
 #game-end-menu {
@@ -346,6 +347,9 @@ a {
     .description {
         margin: 20px 30%;
     }
+    #close-btn {
+        left: 20px;
+    }
 }
 
 /* Large devices (laptops and desktops, 992px and up) */
@@ -353,6 +357,7 @@ a {
 @media screen and (min-width: 992px) {
     #game-area {
         flex-direction: row;
+        justify-content: space-around;
     }
 
     a:hover {
